landing update, page header update

--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -11,7 +11,7 @@
           <!-- end: RESPONSIVE MENU TOGGLER -->
           <!-- start: LOGO -->
           <a class="navbar-brand" href="{{ url_for('static.index') }}">
-           Tron Logistics{#<img src="{{ static('backend/images/logo_s.png') }}"></img>#}
+            <img src="{{ static('frontend/images/wht_logo-n-txt_105x25_72ppi.png') }}">
           </a>
           <!-- end: LOGO -->
         </div>
