--- a/app/templates/static/features.html
+++ b/app/templates/static/features.html
@@ -398,7 +398,7 @@
 							<ul class="contact">
 								<li>
 									<p>
-										<i class="fa fa-phone"></i><strong>Phone:</strong> (123) 456-7890
+										<i class="fa fa-phone"></i><strong>Phone:</strong> (773) 969-6412
 									</p>
 								</li>
 								<li>
@@ -441,9 +441,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<a class="logo" href="index.html">
+							<!--<a class="logo" href="index.html">
 								<img src="{{ static('frontend/images/wht_logo_25x25_72ppi.png') }}">
-							</a>
+							</a>-->
 						</div>
 						<div class="col-md-6">
 							<p>
