Mailing List Embed

--- a/app/templates/static/request_demo.html
+++ b/app/templates/static/request_demo.html
@@ -220,17 +220,17 @@
 							<p>
 								Please sign up to our mailing list to keep updated with new features.
 							</p>
-							<form name="newsletter" id="newsletter" action="" role="form" class="form" id="signup" method="post">
-								{#{{ signup_form.hidden_tag() }}#}
+
+							<form action="//tronlogistics.us11.list-manage.com/subscribe/post?u=9b83ffbdcb29f07455558ba70&amp;id=1b339322d4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form validate" target="_blank" novalidate>
 								<div class="input-group">
-									<input type="text" id="email" name="email" placeholder="Email Address" class="form-control">
-									<span class="input-group-btn">
-										<button type="submit" class="btn btn-default" >
+									<input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="email address" required>
+								    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+								    <div style="position: absolute; left: -5000px;"><input type="text" name="b_9b83ffbdcb29f07455558ba70_1b339322d4" tabindex="-1" value=""></div>
+								    <span class="input-group-btn">
+									    <button type="submit" class="btn btn-default" id="mc-embedded-subscribe">
 											Go!
 										</button>
-
-										<input type="submit" class="btn btn-default" form="newsletter" >
-										 </span>
+									</span>
 								</div>
 							</form>
 						</div>
