--- a/app/templates/static/features.html
+++ b/app/templates/static/features.html
@@ -90,34 +90,6 @@
 		<!-- end: HEADER -->
 		<!-- start: MAIN CONTAINER -->
 		<div class="main-container">
-			<!-- start: STYLE SELECTOR BOX -->
-			<div id="style_selector" class="hidden-xs">
-				<div id="style_selector_container">
-					<div class="style-main-title">
-						Style Selector
-					</div>
-					<div class="box-title">
-						Predefined Color Schemes
-					</div>
-					<div class="images icons-color">
-						<a id="blue" href="#"><img class="active" alt="" src="assets/images/blue.png"></a>
-						<a id="purple" href="#"><img alt="" src="assets/images/purple.png"></a>
-						<a id="red" href="#"><img alt="" src="assets/images/red.png"></a>
-						<a id="orange" href="#"><img alt="" src="assets/images/orange.png"></a>
-						<a id="green" href="#"><img alt="" src="assets/images/green.png"></a>
-					</div>
-					<div style="height:25px;line-height:25px; text-align: center">
-						<a class="clear_style" href="#">
-							Clear Styles
-						</a>
-						<a class="save_style" href="#">
-							Save Styles
-						</a>
-					</div>
-				</div>
-				<div class="style-toggle close"></div>
-			</div>
-			<!-- end: STYLE SELECTOR BOX -->
 
 			<section class="page-top">
 				<div class="container">
@@ -247,47 +219,13 @@
 							<!-- END VIDEO -->
 						</div>
 						<div class="col-md-6">
-							<h3>What Client’s Say</h3>
+							<h1 class="center">Watch your business as it’s happening</h1>
+							<hr>
 							<div class="row">
-								<div class="flexslider">
-									<ul class="slides">
-										<li>
-											<div class="col-md-12">
-												<blockquote class="testimonial">
-													<p>
-														Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit vehicula est, in consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit vehicula est, in consequat.  Donec hendrerit vehicula est, in consequat.  Donec hendrerit vehicula est, in consequat.
-													</p>
-												</blockquote>
-												<div class="testimonial-arrow-down"></div>
-												<div class="testimonial-author">
-													<div class="img-thumbnail img-thumbnail-small">
-														<img src="assets/images/avatar-1.jpg" alt="">
-													</div>
-													<p>
-														<strong>Peter Clark</strong><span>UI Designer - Cliptheme</span>
-													</p>
-												</div>
-											</div>
-										</li>
-										<li>
-											<div class="col-md-12">
-												<blockquote class="testimonial">
-													<p>
-														Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit vehicula est, in consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-													</p>
-												</blockquote>
-												<div class="testimonial-arrow-down"></div>
-												<div class="testimonial-author">
-													<div class="img-thumbnail img-thumbnail-small">
-														<img src="assets/images/avatar-2.jpg" alt="">
-													</div>
-													<p>
-														<strong>Nicole Bell</strong><span>Content Designer - Cliptheme</span>
-													</p>
-												</div>
-											</div>
-										</li>
-									</ul>
+								<div class="col-sm-10 col-sm-offset-1">
+									<p>See your fleet operation in a single picture getting the information you need to
+make the informed decisions you want to be making. No more guessing with
+connected information driving your decision making.</p>
 								</div>
 							</div>
 						</div>
@@ -297,67 +235,33 @@
 			<section class="wrapper padding50">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-12">
-							<h1 class="center">Some of Our Works</h1>
+						<div class="col-md-6">
+							<h1 class="center">Simple Load Creation</h1>
 							<hr>
-						</div>
-						<div class="col-md-4">
-							<div class="flexslider" data-plugin-options='{"directionNav":true, "controlNav": false}'>
-								<ul class="slides">
-									<li>
-										<img src="assets/images/image01.jpg" />
-									</li>
-									<li>
-										<img src="assets/images/image02.jpg" />
-									</li>
-									<li>
-										<img src="assets/images/image03.jpg" />
-									</li>
-								</ul>
+							<div class="row">
+								<div class="col-sm-10 col-sm-offset-1">
+									<p>Create or search for your Shippers and
+										Brokers and enter the load’s pertinent
+										details all in one place. You a have a few
+										options to capture the load’s unique
+										number: you can default to use your
+										own unique load numbers or you can
+										choose to enter the appropriate Shipper
+										/ Broker load number
+									</p>
+								</div>
 							</div>
-							<h4>Top Team</h4>
-							<p>
-								Aenean commodo ligula eget dolor. Aeneane penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.
-							</p>
 						</div>
-						<div class="col-md-4">
-							<div class="flexslider" data-plugin-options='{"directionNav":true, "controlNav": false}'>
-								<ul class="slides">
-									<li>
-										<img src="assets/images/image04.jpg" />
-									</li>
-									<li>
-										<img src="assets/images/image05.jpg" />
-									</li>
-								</ul>
-							</div>
-							<h4>Top Team</h4>
-							<p>
-								Aenean commodo ligula eget dolor. Aeneane penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.
-							</p>
+						<div class="col-md-6">
+							<!-- BEGIN VIDEO -->
+							<iframe src="http://player.vimeo.com/video/25196368?portrait=0" height="300" style="width:100%; border:0" allowFullScreen></iframe>
+							<!-- END VIDEO -->
 						</div>
-						<div class="col-md-4">
-							<div class="flexslider" data-plugin-options='{"directionNav":true, "controlNav": false}'>
-								<ul class="slides">
-									<li>
-										<img src="assets/images/image06.jpg" />
-									</li>
-									<li>
-										<img src="assets/images/image07.jpg" />
-									</li>
-									<li>
-										<img src="assets/images/image08.jpg" />
-									</li>
-								</ul>
-							</div>
-							<h4>Top Team</h4>
-							<p>
-								Aenean commodo ligula eget dolor. Aeneane penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.
-							</p>
-						</div>
+						
 					</div>
 				</div>
 			</section>
+			
 		</div>
 		<!-- end: MAIN CONTAINER -->
 		<!-- start: FOOTER -->
