min-width to header

--- a/app/templates/static/features.html
+++ b/app/templates/static/features.html
@@ -99,13 +99,8 @@
 					<div class="col-md-8 col-sm-8">
 						<ul class="pull-right breadcrumb">
 							<li>
-								<a href="index.html">
+								<a href="{{ url_for('.index') }}">
 									Home
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									Pages
 								</a>
 							</li>
 							<li class="active">
