--- a/app/templates/static/index.html
+++ b/app/templates/static/index.html
@@ -91,7 +91,7 @@
 		<!-- start: MAIN CONTAINER -->
 		<div class="main-container">
 			<!-- start: REVOLUTION SLIDERS -->
-			<section class="fullwidthbanner-container">
+			<section class="fullwidthbanner-container tp-bgimg">
 				<div class="fullwidthabnner">
 					<ul>
 						<!-- start: FIRST SLIDE -->
