--- a/app/templates/static/features.html
+++ b/app/templates/static/features.html
@@ -94,7 +94,7 @@
 			<section class="page-top">
 				<div class="container">
 					<div class="col-md-4 col-sm-4">
-						<h1>Services</h1>
+						<h1>Learn More</h1>
 					</div>
 					<div class="col-md-8 col-sm-8">
 						<ul class="pull-right breadcrumb">
@@ -104,7 +104,7 @@
 								</a>
 							</li>
 							<li class="active">
-								Services
+								Learn More
 							</li>
 						</ul>
 					</div>
