--- a/app/templates/static/index.html
+++ b/app/templates/static/index.html
@@ -124,7 +124,7 @@
 								Learn More!
 							</a>-->
 							</div>
-							<a class="caption lft btn btn-green slide_btn slide_item_left" href="http://themeforest.net/item/clipone-bootstrap-3-responsive-admin-template/5881143?ref=Cliptheme"
+							<a class="caption lft btn btn-green slide_btn slide_item_left" href="{{ url_for('.features') }}"
 							data-x="0"
 							data-y="320"
 							data-speed="400"
