--- a/app/templates/static/index.html
+++ b/app/templates/static/index.html
@@ -151,7 +151,7 @@
 								<div class="content">
 									Efficiently run your business with our simple and easy to use load entry system that stores and provides access to all of your past and present load information.
 								</div>
-								<a class="view-more" href="#">
+								<a class="view-more" href="{{ url_for('.features') }}">
 									Learn More <i class="fa fa-angle-right"></i>
 								</a>
 							</div>
@@ -165,7 +165,7 @@
 								<div class="content">
 									Eliminate the need for countless check calls. Our software automates driver communications and provides realtime tracking of your assets.
 								</div>
-								<a class="view-more" href="#">
+								<a class="view-more" href="{{ url_for('.features') }}">
 									Learn More <i class="fa fa-angle-right"></i>
 								</a>
 							</div>
@@ -179,7 +179,7 @@
 								<div class="content">
 									Our dispatch software brings together the management of your trucks, trailers and drivers in one place linking your assets to your business.
 								</div>
-								<a class="view-more" href="#">
+								<a class="view-more" href="{{ url_for('.features') }}">
 									Learn More <i class="fa fa-angle-right"></i>
 								</a>
 							</div>
@@ -357,7 +357,7 @@
 							<ul class="contact">
 								<li>
 									<p>
-										<i class="fa fa-phone"></i><strong>Phone:</strong> (123) 456-7890
+										<i class="fa fa-phone"></i><strong>Phone:</strong> (773) 969-6412
 									</p>
 								</li>
 								<li>
