--- a/app/templates/static/features.html
+++ b/app/templates/static/features.html
@@ -125,7 +125,7 @@
 						<div class="col-md-4">
 							<div class="feature-box">
 								<div class="feature-icon animate" data-animation-options='{"animation":"fadeInLeft", "duration":"600"}'>
-									<i class="fa fa-group"></i>
+									<i class="fa fa-truck"></i>
 								</div>
 								<div class="feature-info">
 									<h4>Simple Load Creation</h4>
@@ -138,7 +138,7 @@
 						<div class="col-md-4">
 							<div class="feature-box">
 								<div class="feature-icon animate" data-animation-options='{"animation":"fadeInLeft", "duration":"600"}'>
-									<i class="fa fa-mobile"></i>
+									<i class="clip-location"></i>
 								</div>
 								<div class="feature-info">
 									<h4>Location Wizard</h4>
@@ -166,7 +166,7 @@
 						<div class="col-md-4">
 							<div class="feature-box">
 								<div class="feature-icon animate" data-animation-options='{"animation":"fadeInLeft", "duration":"600"}'>
-									<i class="fa fa-text-width"></i>
+									<i class="clip-user"></i>
 								</div>
 								<div class="feature-info">
 									<h4>Seamless Driver Updates</h4>
@@ -179,7 +179,7 @@
 						<div class="col-md-4">
 							<div class="feature-box">
 								<div class="feature-icon animate" data-animation-options='{"animation":"fadeInLeft", "duration":"600"}'>
-									<i class="fa fa-check"></i>
+									<i class="clip-refresh"></i>
 								</div>
 								<div class="feature-info">
 									<h4>Load Status Updates</h4>
@@ -192,7 +192,7 @@
 						<div class="col-md-4">
 							<div class="feature-box">
 								<div class="feature-icon animate" data-animation-options='{"animation":"fadeInLeft", "duration":"600"}'>
-									<i class="fa fa-file"></i>
+									<i class="clip-bubble-paperclip"></i>
 								</div>
 								<div class="feature-info">
 									<h4>Algorithmic Route Planning</h4>
