turn off map scrollwheel

--- a/app/templates/static/features.html
+++ b/app/templates/static/features.html
@@ -387,7 +387,8 @@
 					div: '#map',
 					lat: 40.55,
 					lng: -77.00,
-					zoom: 6
+					zoom: 6,
+					scrollwheel: false,
 				});
 				map.addMarker({
 					lat: 40.45,
