--- a/app/templates/static/404.html
+++ b/app/templates/static/404.html
@@ -7,7 +7,7 @@
 	<!--<![endif]-->
 	<!-- start: HEAD -->
 	<head>
-		<title>Clip-One - Front End</title>
+		<title>Tron Logistics</title>
 		<!-- start: META -->
 		<!--[if IE]><meta http-equiv='X-UA-Compatible' content="IE=edge,IE=9,IE=8,chrome=1" /><![endif]-->
 		<meta charset="utf-8" />
@@ -53,7 +53,7 @@
 						</button>
 						<!-- end: RESPONSIVE MENU TOGGLER -->
 						<!-- start: LOGO -->
-						<a class="navbar-brand" href="index.html">
+						<a class="navbar-brand" href="{{ url_for('static.index') }}">
 							<img src="{{ static('frontend/images/wht_logo-n-txt_210x50_72ppi.png') }}">
 						</a>
 						<!-- end: LOGO -->
