--- a/app/templates/static/index.html
+++ b/app/templates/static/index.html
@@ -54,7 +54,7 @@
 						</button>
 						<!-- end: RESPONSIVE MENU TOGGLER -->
 						<!-- start: LOGO -->
-						<a class="navbar-brand" href="index.html">
+						<a class="navbar-brand" href="{{ url_for('static.index') }}">
 							<img src="{{ static('frontend/images/wht_logo-n-txt_210x50_72ppi.png') }}">
 						</a>
 						<!-- end: LOGO -->
