--- a/app/templates/static/500.html
+++ b/app/templates/static/500.html
@@ -60,7 +60,7 @@
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li class="active">
+							<li class="">
 								<a href="{{ url_for('static.index') }}">
 									HOME
 								</a>
