--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -71,7 +71,7 @@
                             
                         </li>
                         <li>
-                            <a href="{{ url_for('static.logout') }}"><i class="fa fa-external-link-square"></i>
+                            <a href="{{ url_for('auth.logout') }}"><i class="fa fa-external-link-square"></i>
                                 <span class="title"> Logout </span>
                                 <span class="selected"></span>
                             </a>
